--- a/index.html
+++ b/index.html
@@ -11,10 +11,25 @@
   </head>
 
   <body>
-    <header class="container center">
-              <h1>Flash Bitacora</h1>
-        <p class="flow-text">"Publish anything", just in you browser.</p>
+    <header class="container center responsive">
+              <h1>Flash Bitácora</h1>
+        <p class="flow-text responsive">"Publish anything", just in you browser.</p>
     </header>
+    <section>
+      <div class="fixed-action-btn horizontal click-to-toggle">
+          <a class="btn-floating btn-large pink z-depth-5">
+              <i class="large material-icons">mode_edit</i>
+          </a>
+          <ul>
+            <li>
+              <li><a class="btn cyan accent-3 btn-floating z-depth-5" href="#modalChat"><i class="material-icons">chat</i></a></li>
+              <li><a class="btn blue accent-2 btn-floating z-depth-5" href="#modalImages"><i class="material-icons">perm_media</i></a></li>
+              <li><a class="btn green accent-2 btn-floating z-depth-5" href="#modalEvent"><i class="material-icons">today</i></a></li>
+              <li><a class="btn amber accent-2 btn-floating z-depth-5" href="#modalVideo"><i class="material-icons">video_library</i></a></li>
+          </ul>
+      </div>
+    </section>
+
 
 
 
