--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
   <body>
     <header class="container center responsive">
-              <h1>Flash Bitácora</h1>
-        <p class="flow-text responsive">"Publish anything", just in you browser.</p>
+              <h1 class="purple-text text-darken-3 responsive">Flash Bitácora</h1>
+        <p class="flow-text purple-text text-darken-1 responsive">"Publish anything", just in you browser.</p>
     </header>
     <section>
       <div class="fixed-action-btn horizontal click-to-toggle">
