--- a/index.html
+++ b/index.html
@@ -17,18 +17,21 @@
     </header>
     <section>
       <div class="fixed-action-btn horizontal click-to-toggle">
-          <a class="btn-floating btn-large pink z-depth-5">
+          <a class="btn-floating btn-large pink z-depth-5 waves-effect">
               <i class="large material-icons">mode_edit</i>
           </a>
           <ul>
             <li>
-              <li><a class="btn cyan accent-3 btn-floating z-depth-5" href="#modalChat"><i class="material-icons">chat</i></a></li>
-              <li><a class="btn blue accent-2 btn-floating z-depth-5" href="#modalImages"><i class="material-icons">perm_media</i></a></li>
-              <li><a class="btn green accent-2 btn-floating z-depth-5" href="#modalEvent"><i class="material-icons">today</i></a></li>
-              <li><a class="btn amber accent-2 btn-floating z-depth-5" href="#modalVideo"><i class="material-icons">video_library</i></a></li>
+              <li><a class="btn cyan accent-3 btn-floating z-depth-5 waves-effect" href="#modalChat"><i class="material-icons">chat</i></a></li>
+              <li><a class="btn blue accent-2 btn-floating z-depth-5 waves-effect" href="#modalImages"><i class="material-icons">perm_media</i></a></li>
+              <li><a class="btn green accent-2 btn-floating z-depth-5 waves-effect" href="#modalEvent"><i class="material-icons">today</i></a></li>
+              <li><a class="btn amber accent-2 btn-floating z-depth-5 waves-effect" href="#modalVideo"><i class="material-icons">video_library</i></a></li>
           </ul>
       </div>
+
+
     </section>
+
 
 
 
